kubernetes_manifests/visualsubnetcalc-ns.yml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: visualsubnetcalc
  name: visualsubnetcalc
