kubernetes_manifests/allow-nginx-to-visualsubnetcalc.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx-to-visualsubnetcalc
  namespace: visualsubnetcalc
spec:
  podSelector:
    matchLabels:
      app: visualsubnetcalc
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx-default
          podSelector:
            matchLabels:
              ingress: default
      ports:
        - port: 443
        - port: 80
        - port: 5000
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
