kubernetes_manifests/network-policy-visualsubnetcalc-deny-all.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: visualsubnetcalc-deny-all
  namespace: visualsubnetcalc
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
